--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Esperanto'
 - !lcsh 'Silfer, Giorgio, 1949-'
 - !lcc 'PM'
+- GITenberg
 title: La liturgio de l' foiro (Elementoj por ekzegezo)
 url: http://www.gutenberg.org/ebooks/23586
